--- a/src/style.css
+++ b/src/style.css
@@ -111,14 +111,14 @@ body {
 }
 
 .modalInput > form > input[type="text"] {
-    flex: 1;
+  flex: 1;
 }
 
 .modalInput > form > textarea {
-    flex: 3 1 auto;
-    height: 200px;
-    margin-bottom: auto;
-    resize: none;
+  flex: 3 1 auto;
+  height: 200px;
+  margin-bottom: auto;
+  resize: none;
 }
 
 .dueDate {
@@ -136,10 +136,50 @@ body {
 }
 
 .priority > button {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .todo {
   display: flex;
   justify-content: space-between;
 }
+
+.detailsModal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+}
+
+.detailsModalContent {
+  background-color: #fefefe;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 70%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+}
+
+.detailsModalHeader {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.closeDetailsModal {
+  margin-left: auto;
+}
+
+.detailsModalBody {
+  padding-left: 20px;
+}
+
