--- a/src/style.css
+++ b/src/style.css
@@ -182,3 +182,66 @@ body {
   padding-left: 20px;
 }
 
+.editModal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+}
+
+.editModalContent {
+  background-color: #fefefe;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 60%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.editModalHeader {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.closeEditModal {
+  margin-left: auto;
+}
+
+.editModalBody {
+  padding-left: 20px;
+}
+
+.editForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.editForm > input[type="text"],
+.editForm > textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  border: 0;
+  padding: 0;
+  outline: 0;
+}
+
+.editForm > input[type="text"] {
+  flex: 1;
+}
+
+.editForm > textarea {
+  flex: 3 1 auto;
+  height: 100px;
+  margin-bottom: auto;
+  resize: none;
+}
